# friendsnetwork

./: .gitignore  Dockerfile  README.md  manage.py  openapi.yaml  pyproject.toml  requirements.txt
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_friendship_status.py
friendsnetwork/: asgi.py  settings.py  urls.py  wsgi.py
